--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,8 +5,8 @@
         <div class="col-md-3">
             <div class="card">
                 <div class="card-body">
-                    <div class="h5">@ArnoldM</div>
-                    <div class="h7 text-muted">Fullname : Arnold A. Magalona</div>
+                    <div class="h5">@Adrian08</div>
+                    <div class="h7 text-muted">Fullname : Adrian B. Montenegro</div>
                     <div class="h7">Developer of web applications</div>
                 </div>
                 <ul class="list-group list-group-flush">
